infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-europartner-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-europartner-backend
  template:
    metadata:
      labels:
        app: invoice-europartner-backend
    spec:
      containers:
        - name: invoice-europartner-backend-container
          image: registry.digitalocean.com/oondemand/invoice-europartner-backend:0.0.4
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.1"
            limits:
              memory: "2048Mi"
              cpu: "2"
