infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoice-europartner-backend-service
spec:
  type: LoadBalancer
  selector:
    app: invoice-europartner-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
