infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoice-europartner-backend-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.oondemand.com.br
      secretName: app-tls
  rules:
    - host: api.oondemand.com.br
      http:
        paths:
          - path: /invoice-europartner(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: invoice-europartner-backend-service
                port:
                  number: 80
